--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,11 +2,16 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title White Board
+
+    %title= content_for?(:title) ? yield(:title) : "Whiteboard - FMS"
+
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
     = csrf_meta_tags
+
   %body
+    = render 'layouts/nav'
+    = render 'layouts/notifications'
 
     .row
       = yield
