--- a/app/views/users/finish_signup.html.haml
+++ b/app/views/users/finish_signup.html.haml
@@ -12,4 +12,4 @@
         = f.text_field :email, :autofocus => true, :value => '', class: 'form-control input-lg', placeholder: 'Example: email@me.com'
         %p.help-block Please confirm your email address. No spam.
     .actions
-      = f.submit 'Continue', :class => 'btn btn-primary'
+      = f.submit 'Continue', :class => 'button'
