--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -6,4 +6,9 @@
 
   %section.top-bar-section
     %ul.right
+      - if user_signed_in?
+        %li= link_to "Profile", profile_path(current_user.profile)
+        %li= link_to "Sign Out", destroy_user_session_path, method: :delete
+      - else
+        %li= link_to "Log in", new_user_session_path
 
