--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,2 +1,3 @@
 %h1 Welcome to White Board
-= link_to "Sign Out", destroy_user_session_path, method: :delete
+
+%p This is the welcome page! Other stuff will go here later
