--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -10,5 +10,5 @@
         %li= link_to "Profile", profile_path(current_user.profile)
         %li= link_to "Sign Out", destroy_user_session_path, method: :delete
       - else
-        %li= link_to "Log in", new_user_session_path
+        %li= link_to "Sign in", new_user_session_path
 
