--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -2,3 +2,14 @@
 
 - unless current_user.has_family?
   = link_to 'Create or join family', new_family_path, class: "button"
+- else
+  .row
+    .large-6.columns
+      %h2 Family Members
+      %ul
+        - current_user.family.users.each do |user|
+          %li= user.name
+
+    .large-6.columns
+      %h2 Family Updates
+
