Added font-awesome to website and fixed login buttons

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,8 +13,9 @@
  *= require_tree .
  *= require_self
  *= require foundation_and_overrides
-
  */
 
 @import 'modules/messages';
 @import 'modules/members';
+@import "font-awesome-sprockets";
+@import "font-awesome";
