--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,8 +14,8 @@
  */
 
 // Fonts
-@import url(http://fonts.googleapis.com/css?family=Pacifico);
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+/* @import url(http://fonts.googleapis.com/css?family=Pacifico); */
+/* @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700); */
 
 // Bourbon Mixins
 @import 'bourbon';
