--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,8 @@
     %title= content_for?(:title) ? yield(:title) : "Whiteboard - FMS"
 
     = stylesheet_link_tag    "application"
-    = stylesheet_link_tag    "http://fonts.googleapis.com/css?family=Shadows+Into+Light"
+    = stylesheet_link_tag    "http://fonts.googleapis.com/css?family=Lato:300,400,700|Pacifico"
+
     = javascript_include_tag "vendor/modernizr"
     = csrf_meta_tags
 
