Added preview of other boards that WhiteBoard will ahve

--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -12,8 +12,20 @@
       %i.fa.fa-comments-o.fa-3x
       %h1 Message Board
       %p Post chores, events, sharables, and general information
+    = link_to root_path, class: 'grid-item' do
+      %i.fa.fa-envelope-o.fa-3x
+      %h1 Private Messages
+      %p Feature coming soon..
     %a.grid-item{:href => "javascript:void(0)"}
       %i.fa.fa-calendar.fa-3x
       %h1 Family Calendar
+      %p Feature coming soon...
+    %a.grid-item{:href => "javascript:void(0)"}
+      %i.fa.fa-camera-retro.fa-3x
+      %h1 Photo Board
+      %p Feature coming soon...
+    %a.grid-item{:href => "javascript:void(0)"}
+      %i.fa.fa-user-md.fa-3x
+      %h1 Health Board
       %p Feature coming soon...
     .right-cover
