--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,14 +13,12 @@
  *= require foundation_and_overrides
  */
 
-// Fonts
-/* @import url(http://fonts.googleapis.com/css?family=Pacifico); */
-/* @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700); */
-
 // Bourbon Mixins
 @import 'bourbon';
 @import 'neat';
 @import 'refills/card';
+@import 'refills/hero';
+@import 'refills/table';
 
 // Personal Modules
 @import 'globals';
@@ -29,6 +27,7 @@
 @import 'modules/devise';
 @import 'modules/buttons';
 @import 'modules/profile';
+@import 'modules/welcome';
 
 // Font Awesome
 @import "font-awesome-sprockets";
