--- a/app/views/family_memberships/index.html.haml
+++ b/app/views/family_memberships/index.html.haml
@@ -1,5 +1,3 @@
-%h1 Family Members
-
 %h2 Invite Family Members
 = form_for @invitation do |f|
   - if @invitation.errors.any?
@@ -13,11 +11,19 @@
   = f.label :name
   = f.text_field :name
 
-  = f.submit 'Send invite', class: "button success"
+  = f.submit 'Send invite', class: "button success tiny"
 
-%ul.family-members
-  - @members.each do |member|
-    %li.callout.panel
-      %strong= "#{member.name} - #{member.email}"
-      .right= link_to 'Private Message', '#', class: 'button tiny success'
+%h2 Family Members
+%table.table-minimal
+  %thead
+    %tr
+      %th Name
+      %th Email
+  %tbody
+    - @members.each do |member|
+      %tr
+        %td= member.name
+        %td= member.email
+
+
 
