--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,6 +16,8 @@
     = render 'layouts/nav'
     = render 'layouts/notifications'
 
+    = yield :hero
+
     .row
       .small-12.columns
         #content
