--- a/app/views/family_messages/index.html.haml
+++ b/app/views/family_messages/index.html.haml
@@ -1,17 +1,9 @@
 %h2.text-center= "Message Board - #{Date.today.strftime('%B %d, %Y')}"
-%a.button.expand{"data-reveal-id" => "myModal", :href => "#"} Add A Message To Today's Board
 
-#myModal.reveal-modal{"aria-hidden" => "true", "aria-labelledby" => "modalTitle", "data-reveal" => "", :role => "dialog"}
-  = form_for [current_user.family, @message || FamilyMessage.new] do |f|
-    = f.label :message
-    = f.text_area :message
+= link_to 'previous', family_family_messages_path(@family, q: 1)
+= link_to_unless @finder.page_one?, 'next', family_family_messages_path(@family, q: 0)
 
-    = f.label :message_category_id
-    = f.select :message_category_id, MessageCategory.all.map { |n| [n.name.capitalize, n.id] }
-
-    = f.submit 'Create Message', class: 'button tiny'
-  %a.close-reveal-modal{"aria-label" => "Close"} ×
-
+= render 'message'
 
 .row
   .large-6.columns
