Added copyright info on footer, also changed the CTA button to be more modern

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,7 @@
 @import 'refills/card';
 @import 'refills/hero';
 @import 'refills/table';
+@import 'refills/footer';
 
 // Personal Modules
 @import 'globals';
