--- a/app/assets/stylesheets/globals.scss
+++ b/app/assets/stylesheets/globals.scss
@@ -1,3 +1,14 @@
 .top-bar .name h1 a {
   font-family: 'Pacifico', cursive;
 }
+
+.hero .hero-inner button.cta {
+  background: none;
+  border: 2px solid white;
+  &:hover {
+    background: black;
+    color: white;
+    border: 2px solid black;
+  }
+}
+
