--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -5,5 +5,5 @@
         %h1.hero-title Efficient Families Are Happy Families
         %p.hero-subtitle Create a space for your family to connect
       = link_to new_user_registration_path do
-        %button Learn More
+        %button.cta Learn More
 
