Updated message board comments to look a lot nicer

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,7 @@
 @import 'refills/hero';
 @import 'refills/table';
 @import 'refills/footer';
+@import 'refills/comments';
 
 // Personal Modules
 @import 'globals';
