--- a/app/assets/stylesheets/globals.scss
+++ b/app/assets/stylesheets/globals.scss
@@ -12,3 +12,14 @@
   }
 }
 
+a.button.expand.main-button {
+  background: none;
+  border: 2px solid black;
+  color: black;
+  font-weight: 600;
+  transition: background-color 0.5s ease;
+  &:hover {
+    background: black;
+    color: white;
+  }
+}
