--- a/app/views/family_messages/_message.html.haml
+++ b/app/views/family_messages/_message.html.haml
@@ -1,11 +1,17 @@
-%a.button.expand{"data-reveal-id" => "myModal", :href => "#"} Add A Message To Today's Board
-#myModal.reveal-modal{"aria-hidden" => "true", "aria-labelledby" => "modalTitle", "data-reveal" => "", :role => "dialog"}
-  = form_for [current_user.family, FamilyMessage.new] do |f|
-    = f.label :message
-    = f.text_area :message
+.row
+  .large-6.columns.large-offset-3
+    .row
+      .large-6.columns
+        %a.button.expand.main-button{"data-reveal-id" => "myModal", :href => "#"} Add A Message
+      .large-6.columns
+        = link_to "Today's Message Board", family_family_messages_path(@family, q: 0), class: "button expand main-button"
+    #myModal.reveal-modal{"aria-hidden" => "true", "aria-labelledby" => "modalTitle", "data-reveal" => "", :role => "dialog"}
+      = form_for [current_user.family, FamilyMessage.new] do |f|
+        = f.label :message
+        = f.text_area :message
 
-    = f.label :category
-    = f.select :category, FamilyMessage::CATEGORIES
+        = f.label :category
+        = f.select :category, FamilyMessage::CATEGORIES
 
-    = f.submit 'Create Message', class: 'button tiny'
-  %a.close-reveal-modal{"aria-label" => "Close"} ×
+        = f.submit 'Create Message', class: 'button tiny'
+      %a.close-reveal-modal{"aria-label" => "Close"} ×
