Fixed test to now use the font awesome icons instead of finding text

--- a/app/views/family_messages/index.html.haml
+++ b/app/views/family_messages/index.html.haml
@@ -1,6 +1,6 @@
 .row
   .large-2.columns
-    = link_to family_family_messages_path(@family, q: params[:q].to_i + 1 ) do
+    = link_to family_family_messages_path(@family, q: params[:q].to_i + 1 ), id: "prev-day" do
       %i.fa.fa-arrow-left.fa-2x.previous-day
 
   .large-8.columns
