--- a/app/views/family_messages/index.html.haml
+++ b/app/views/family_messages/index.html.haml
@@ -23,7 +23,7 @@
       - @sharables.each do |message|
         .comment
           .comment-image
-            %i.fa.fa-user.fa-3x
+            = image_tag message.user.avatar_url
           .comment-content
             %p= message.message
             %p.comment-detail= "by #{message.user.name}, #{time_ago_in_words(message.created_at)} ago"
@@ -33,7 +33,7 @@
       - @chores.each do |message|
         .comment
           .comment-image
-            %i.fa.fa-user.fa-3x
+            = image_tag message.user.avatar_url
           .comment-content
             %p= message.message
             %p.comment-detail= "by #{message.user.name}, #{time_ago_in_words(message.created_at)} ago"
@@ -44,7 +44,7 @@
       - @events.each do |message|
         .comment
           .comment-image
-            %i.fa.fa-user.fa-3x
+            = image_tag message.user.avatar_url
           .comment-content
             %p= message.message
             %p.comment-detail= "by #{message.user.name}, #{time_ago_in_words(message.created_at)} ago"
@@ -55,7 +55,7 @@
       - @general.each do |message|
         .comment
           .comment-image
-            %i.fa.fa-user.fa-3x
+            = image_tag message.user.avatar_url
           .comment-content
             %p= message.message
             %p.comment-detail= "by #{message.user.name}, #{time_ago_in_words(message.created_at)} ago"
