Updated buttons/styling of the users membership page

--- a/app/assets/stylesheets/globals.scss
+++ b/app/assets/stylesheets/globals.scss
@@ -12,7 +12,7 @@
   }
 }
 
-a.button.expand.main-button {
+a.button.expand.main-button, input.button.main-button, a.button.tiny.main-button {
   background: none;
   border: 2px solid black;
   color: black;
