--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -27,6 +27,6 @@
         %br/
         = f.password_field :password_confirmation, autocomplete: "off"
       .actions
-        = f.submit "Sign up", class: "button"
+        = f.submit "Sign up", class: "button tiny main-button"
 
     = render "devise/shared/links"
