--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,7 +1,7 @@
 %h1= "Welcome, #{@profile.user.name}"
 
 - unless current_user.has_family?
-  = link_to 'Create or join family', new_family_path, class: "button"
+  = link_to 'Create or join family', new_family_path, class: "button tiny main-button"
 - else
   .grid-items-lines
     = link_to family_members_path(current_user.family), class: 'grid-item' do
