Made the home page look a lot prettier

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,6 +21,7 @@
 @import 'refills/table';
 @import 'refills/footer';
 @import 'refills/comments';
+@import 'refills/box_card';
 
 // Personal Modules
 @import 'globals';
