--- a/app/assets/stylesheets/modules/welcome.scss
+++ b/app/assets/stylesheets/modules/welcome.scss
@@ -2,3 +2,30 @@ h1.hero-title {
   color: white;
   font-size: 5em;
 }
+
+.wrapper-for-content-outside-of-footer {
+  margin-top: 4em;
+}
+
+.selling-point {
+  text-align: center;
+  margin-top: 4em;
+}
+
+h3.selling-title {
+  font-weight: 600;
+  font-family: Lato, sans-serif;
+}
+
+p.secondary-text {
+  color: rgba(51, 51, 51, 0.5);
+}
+
+.section-one {
+  height: 400px
+}
+
+.sign-up-button {
+  background: black;
+  font-weight: 700;
+}
