--- a/app/assets/stylesheets/refills/footer.scss
+++ b/app/assets/stylesheets/refills/footer.scss
@@ -1,6 +1,6 @@
 .wrapper-for-content-outside-of-footer {
   min-height: 100%;
-  height: auto !important;
+  height: auto;
   height: 100%;
   margin: 0 auto -4em;
 }
