Added animate.css and some nice animations to the main selling points on the home page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@
  * file per style scope.
  *
  *= require foundation_and_overrides
+ *= require animate
  */
 
 // Bourbon Mixins
@@ -35,3 +36,6 @@
 // Font Awesome
 @import "font-awesome-sprockets";
 @import "font-awesome";
+
+// Animate.css
+@import "animate";
