--- a/app/assets/stylesheets/modules/welcome.scss
+++ b/app/assets/stylesheets/modules/welcome.scss
@@ -29,3 +29,22 @@ p.secondary-text {
   background: black;
   font-weight: 700;
 }
+
+.profile-icon {
+  transition: all .2s ease-in-out;
+  &:hover {
+    transform: scale(1.3);
+  }
+}
+
+.fa-heart.profile-icon:hover {
+  color: #8A0707;
+}
+
+.fa-bar-chart.profile-icon:hover {
+  color: #0B486B;
+}
+
+.fa-comments-o.profile-icon:hover {
+  color: #3B8686;
+}
