Have first iteration of messaging working and associated properly but test is still failing and can also only message one person at a time

--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -12,7 +12,7 @@
       %i.fa.fa-comments-o.fa-3x
       %h1 Message Board
       %p Post chores, events, sharables, and general information
-    = link_to root_path, class: 'grid-item' do
+    = link_to conversations_path, class: 'grid-item' do
       %i.fa.fa-envelope-o.fa-3x
       %h1 Private Messages
       %p Feature coming soon..
