--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -15,7 +15,7 @@
     = link_to conversations_path, class: 'grid-item' do
       %i.fa.fa-envelope-o.fa-3x
       %h1 Private Messages
-      %p Feature coming soon..
+      %p Have personal conversations, plan surprise parties, and much more!
     %a.grid-item{:href => "javascript:void(0)"}
       %i.fa.fa-calendar.fa-3x
       %h1 Family Calendar
